[gd_scene load_steps=9 format=1]

[ext_resource path="res://resources/main_menu.gd" type="Script" id=1]
[ext_resource path="res://mov/main_menu.ogv" type="VideoStream" id=2]
[ext_resource path="res://resources/playbutton.png" type="Texture" id=3]
[ext_resource path="res://resources/playclick.png" type="Texture" id=4]
[ext_resource path="res://resources/highscorebutton.png" type="Texture" id=5]
[ext_resource path="res://resources/highscoreclick.png" type="Texture" id=6]
[ext_resource path="res://resources/settingsbutton.png" type="Texture" id=7]
[ext_resource path="res://resources/settingsclick.png" type="Texture" id=8]

[node name="main_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="video" type="VideoPlayer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
stream/audio_track = 0
stream/stream = ExtResource( 2 )
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
expand = true

[node name="play_tex_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 368.0
margin/top = 324.0
margin/right = 645.0
margin/bottom = 384.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="hiscore_tex_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 368.0
margin/top = 403.0
margin/right = 646.0
margin/bottom = 459.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="settings_tex_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 367.0
margin/top = 474.0
margin/right = 646.0
margin/bottom = 526.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 1
params/stretch_mode = 0

[connection signal="pressed" from="play_tex_button" to="." method="_on_play_button_pressed"]

[connection signal="pressed" from="hiscore_tex_button" to="." method="_on_hiscore_tex_button_pressed"]

[connection signal="pressed" from="settings_tex_button" to="." method="_on_settings_tex_button_pressed"]


